# parad0x-media-engine

./: .gitignore  CHANGELOG.md  COMMERCIAL_LICENSE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  adaptive_image_engine.py  avif_extreme_engine.py  avif_safe_engine.py  fast_av1_video_engine.py  install.sh  media_benchmark.py  parad0x_media_engine.py  pyproject.toml  setup.ps1  zone_video_engine.py
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
docs/: COMPATIBILITY.md  COMPETITIVE_RESULTS.md  INSTALL.md  RELEASE_AUDIT.md  VALIDATION.md
examples/: README.md  cli-output-video-balanced.json
scripts/: public_surface_check.py
tests/: test_media_benchmark.py  test_parad0x_media_engine.py
